--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   sqflite: ^2.2.8 # sqfliteを追加
   path_provider: ^2.0.13 # sqfliteのパス取得に必要
-  path: ^1.9.0 # 最新バージョンを指定
+  path: ^1.9.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -50,6 +50,7 @@ dependencies:
   intl: ^0.19.0
   flutter_localizations:
     sdk: flutter
+  freezed_annotation: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +67,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   custom_lint: ^0.7.5
   riverpod_lint: ^2.6.5
+  freezed: ^3.0.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
