--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   dio: ^5.8.0+1
   retrofit: ^4.4.2
   retrofit_generator: ^9.2.0
+  package_info_plus: ^8.3.0
 
 dev_dependencies:
   flutter_test:
