--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,13 +57,14 @@ dependencies:
   retrofit: ^4.4.2
   retrofit_generator: ^9.2.0
   package_info_plus: ^8.3.0
+  flutter_native_splash: ^2.4.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.4.15 
+  build_runner: ^2.4.15
   riverpod_generator: ^2.6.5
-
+  flutter_native_splash: ^2.4.4
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -74,6 +75,18 @@ dev_dependencies:
   riverpod_lint: ^2.6.5
   freezed: ^3.0.6
   json_serializable: ^6.9.5
+
+flutter_native_splash:
+  image: assets/images/ic_logo.png # スプラッシュ画面の画像
+  android_gravity: center
+  ios_content_mode: center
+  color: "#000000" # スプラッシュ画面の背景色
+  image_dark: assets/images/ic_logo.png # ダークモードのスプラッシュ画面の画像
+  android: true
+  ios: true
+  fullscreen: true  #trueで通知バーが非表示になる
+  android_12:
+    image: assets/images/ic_logo.png # Android 12のスプラッシュ画面の画像
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
