--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   http: ^1.3.0
   geolocator: ^13.0.3
   url_launcher: ^6.3.1
-  intl: ^0.19.0
+  intl: ^0.20.2
   flutter_localizations:
     sdk: flutter
   freezed_annotation: ^3.0.0
@@ -59,6 +59,7 @@ dependencies:
   package_info_plus: ^8.3.0
   flutter_native_splash: ^2.4.4
   flutter_launcher_icons: ^0.14.4
+  device_preview: ^1.3.1
 
 dev_dependencies:
   flutter_test:
@@ -118,7 +119,7 @@ flutter:
   assets:
     - assets/ramen_model.tflite
     - assets/ramen_model_labels.txt
-    - assets/NotoSansJP-Regular.ttf
+    - assets/SourceHanSansJP-Regular.otf
     - .env.dev
     - .env.prod
     - assets/translations/
@@ -135,6 +136,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: SourceHanSansJP # フォントファミリー名を定義
+      fonts:
+        - asset: assets/SourceHanSansJP-Regular.otf # フォントファイルのパス
   # fonts:
   #   - family: Schyler
   #     fonts:
